# bluefox-mlc-continuous-capture-avi

./: LICENSE  README.md
Common/: CommonGUIFunctions.cpp  CommonGUIFunctions.h  Info.h  aviexception.h  avihelper.cpp  avihelper.h  aviwrapper.cpp  aviwrapper.h  exampleHelper.h  exampleHelper_C.c  mvIcon.xpm  wxAbstraction.h
Common/win32/: ProxyResolver.cpp  ProxyResolver.h  ProxyResolverContext.cpp
ContinuousCaptureToAVIFile/: CMakeLists.txt  ContinuousCaptureToAVIFile.VC12.sln  ContinuousCaptureToAVIFile.VC12.vcxproj  ContinuousCaptureToAVIFile.VC12.vcxproj.filters  ContinuousCaptureToAVIFile.cpp
SequenceCapture/: CMakeLists.txt  SequenceCapture.VC12.sln  SequenceCapture.VC12.vcxproj  SequenceCapture.VC12.vcxproj.filters  SequenceCapture.cpp  SequenceCapture.win32.cpp
